tests/positive/if.c
main() {
    int i;
    i = 7;
    if(1-1)
        i = 6;
}
