tests/negative/malformed_if.c
main() {
    if (1-1)
}
